# ollama_native

./: .gitignore  Cargo.toml  clear.sh
src/: main.rs
ui/: appwindow.slint
