[package]
name = "ollama-native"
version = "0.1.25"
edition = "2021"

[dependencies]
slint = "1.14.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
ollama-rs = { version = "0.2.0", features = ["stream"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
rfd = "0.14"
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
slint-build = "1.14.1"
